tests/bad/sizeof_bad_type.oc
/// fail: Couldn't find this identifier: Foo

def main() {
    let x = sizeof(Foo)
}